<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/lotus"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="100dp"
        android:textSize="20sp"
        android:text="@string/text_frag22"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp"
        android:textSize="15sp"
        android:text="@string/text_frag2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:layout_marginTop="100dp"
        android:paddingHorizontal="50dp"
        android:textSize="10sp"
        android:text="@string/Copyright"/>
</LinearLayout>