<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/lotus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingHorizontal="100dp"
        android:text="@string/text_frag33"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:text="@string/text_frag3"
        android:textColor="#000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingVertical="10dp"
        android:text="Get Start"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:text="@string/Copyright"
        android:textColor="#000"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

</LinearLayout>